deployment/production/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-storage-production
spec:
  selector:
    matchLabels:
      app: model-storage
      env: production
  replicas: 1
  template:
    metadata:
      labels:
        app: model-storage
        env: production
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/model-storage:master
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        command: ["gunicorn", "-c", "gunicorn.py", "model_storage.wsgi:app"]
        resources:
          requests:
            cpu: "1m"
          limits:
            cpu: "2000m"
