deployment/production/service.yml
kind: Service
apiVersion: v1
metadata:
  name: model-storage-production
spec:
  selector:
    app: model-storage
    env: production
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 8000
