deployment/production/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: model-storage-production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  tls:
  - hosts:
    - api.dd-decaf.eu
    secretName: decaf-tls
  rules:
  - host: api.dd-decaf.eu
    http:
      paths:
      - path: /model-storage
        backend:
          serviceName: model-storage-production
          servicePort: 80
